--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts",
+    "dev": "ts-node src/index.ts",
+    "start": "node build/index.js",
     "lint": "eslint src/**/*.ts",
     "build": "tsc && chmod 755 build/index.js"
   },
@@ -17,11 +18,13 @@
     "ai": "^4.3.16",
     "binance-api-node": "^0.12.9",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "taapi": "^1.4.8",
     "zod": "^3.25.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
